forgot what I did tbh

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/nobaboy/.config/hypr/wallpaper.png
-wallpaper = DP-1, /home/nobaboy/.config/hypr/wallpaper.png
+preload = ~/.config/hypr/wallpaper.png
+wallpaper = , ~/.config/hypr/wallpaper.png
