--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -7,6 +7,10 @@ windowrule = suppressevent maximize, class:.*
 # Dolphin
 windowrule = size 20% 40%, class:^(org\.kde\.dolphin)$, title:^(Choose Application — Dolphin)$
 
+# Kitty
+windowrule = float, class:^(system-monitor)$
+windowrule = size 60%, class:^(system-monitor)$
+
 # PavuControl
 windowrule = float, class:^(org\.pulseaudio\.pavucontrol)$
 windowrule = size 40% 50%, class:^(org\.pulseaudio\.pavucontrol)$
