--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -38,6 +38,10 @@ input {
     sensitivity = 0
     force_no_accel = 1
     numlock_by_default = true
+
+    touchpad {
+        disable_while_typing = false
+    }
 }
 
 # █▀▄▀█ █ █▀ █▀▀
