Configure dunst and wlogout, and more css cleanup

--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -4,18 +4,24 @@
 
 windowrule = suppressevent maximize, class:.*
 
+# Common Modals
+windowrule = float, title:^(Open)$
+windowrule = float, title:^(Choose Files)$
+windowrule = float, title:^(Save As)$
+windowrule = size 600, title:^(Save As)$
+
 # Dolphin
 windowrule = size 20% 40%, class:^(org\.kde\.dolphin)$, title:^(Choose Application — Dolphin)$
 
 # Kitty
-windowrule = float, class:^(system-monitor)$
-windowrule = size 60%, class:^(system-monitor)$
+windowrule = float, class:^(floating-kitty)$
+windowrule = size 60%, class:^(floating-kitty)$
 
 # PavuControl
 windowrule = float, class:^(org\.pulseaudio\.pavucontrol)$
 windowrule = size 40% 50%, class:^(org\.pulseaudio\.pavucontrol)$
 
-# Picture in Picture
+# Picture-in-Picture
 windowrule = float, title:^(Picture-in-Picture)$
 windowrule = pin, title:^(Picture-in-Picture)$
 windowrule = noinitialfocus, title:^(Picture-in-Picture)$
@@ -26,13 +32,8 @@ windowrule = move 100%-w-20, title:^(Picture-in-Picture)$
 windowrule = float, class:^(org\.prismlauncher\.PrismLauncher)$, title:^(.* — Prism Launcher .*)$
 windowrule = size 50% 60%, class:^(org\.prismlauncher\.PrismLauncher)$, title:^(.* — Prism Launcher .*)$
 
-# Common Modals
-windowrule = float, title:^(Open)$
-windowrule = float, title:^(Choose Files)$
-windowrule = float, title:^(Save As)$
-windowrule = size 600, title:^(Save As)$
-
 # █   ▄▀█ █▄█ █▀▀ █▀█   █▀█ █ █ █   █▀▀ █▀
 # █▄▄ █▀█  █  ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
 
 layerrule = blur, wofi
+layerrule = animation slide, notifications
