--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,12 +1,13 @@
 {
     "layer": "top",
     "position": "top",
-    "mod": "dock",
+    "mode": "dock",
 
     "height": 28,
     "margin-top": 8,
-    "margin-left": 4,
-    "margin-right": 4,
+    "margin-left": 8,
+    "margin-right": 8,
+    "spacing": 8,
 
     "include": [
         "~/.config/waybar/modules.jsonc"
