--- a/.config/waybar/modules.jsonc
+++ b/.config/waybar/modules.jsonc
@@ -38,13 +38,13 @@
     "cpu": {
         "format": "󰍛 {usage}%",
         "tooltip": false,
-        "on-click": "~/.config/waybar/scripts/system-monitor.sh"
+        "on-click": "~/.config/waybar/scripts/system-monitor.sh toggle"
     },
 
     "memory": {
         "format": " {percentage}%",
         "tooltip-format": " RAM: {used:0.1f} GB / {total:0.1f} GB\n Swap: {swapUsed:0.1f} GB / {swapTotal:0.1f} GB",
-        "on-click": "~/.config/waybar/scripts/system-monitor.sh"
+        "on-click": "~/.config/waybar/scripts/system-monitor.sh toggle"
     },
 
     "network": {
@@ -54,13 +54,15 @@
         "format-disconnected": "󰖪",
         "tooltip-format": "Connected to {essid}\n {bandwidthDownBytes} |  {bandwidthUpBytes}",
         "tooltip-format-disconnected": "Disconnected",
+        // "on-click": "~/.config/waybar/scripts/networkmanager.sh",
+        // "on-click-right": "~/.config/waybar/scripts/nm-applet.sh toggle",
         "interval": 2
     },
 
     "custom/power": {
         "format": "",
         "tooltip": false,
-        "on-click": "wlogout"
+        "on-click": "wlogout -b 4"
     },
 
     "pulseaudio": {
@@ -74,8 +76,8 @@
 
     "hyprland/workspaces": {
         "format": "{}",
-        "all-outputs": true,
         "on-click": "activate",
+        "all-outputs": true,
         "persistent-workspaces": {
             "*": 5
         }
