Slightly match colors with kitty since those are my favourite of all

--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -1,70 +1,70 @@
 # The basic colors
-foreground              #A1B5D8  
-background              #1E1E2E  
-selection_foreground    #1E1E2E  
-selection_background    #007AFF  
+foreground              #a1b5d8  
+background              #1e1e2e  
+selection_foreground    #1e1e2e  
+selection_background    #007aff  
 
 # Cursor colors
-cursor                  #D1D5DB
-cursor_text_color       #1E1E2E  
+cursor                  #d1d5db
+cursor_text_color       #1e1e2e  
 
 # URL underline color when hovering with mouse
-url_color               #007AFF  
+url_color               #007aff  
 
 # Kitty window border colors
-active_border_color     #007AFF  
-inactive_border_color   #3A4A74  
-bell_border_color       #007AFF  
+active_border_color     #007aff  
+inactive_border_color   #3a4a74  
+bell_border_color       #007aff  
 
 # OS Window titlebar colors
 wayland_titlebar_color system
 macos_titlebar_color system
 
 # Tab bar colors
-active_tab_foreground   #FFFFFF  
-active_tab_background   #007AFF  
-inactive_tab_foreground #A1B5D8  
-inactive_tab_background #1E1E2E  
-tab_bar_background      #1E1E2E  
+active_tab_foreground   #ffffff  
+active_tab_background   #007aff  
+inactive_tab_foreground #a1b5d8  
+inactive_tab_background #1e1e2e  
+tab_bar_background      #1e1e2e  
 
 # Colors for marks (marked text in the terminal)
-mark1_foreground #1E1E2E
-mark1_background #007AFF  
-mark2_foreground #1E1E2E
-mark2_background #007AFF  
-mark3_foreground #1E1E2E
-mark3_background #007AFF  
+mark1_foreground #1e1e2e
+mark1_background #007aff  
+mark2_foreground #1e1e2e
+mark2_background #007aff  
+mark3_foreground #1e1e2e
+mark3_background #007aff  
 
 # The 16 terminal colors
 
 # black
-color0 #2D2D2D
+color0 #2d2d2d
 color8 #757575
 
 # red
-color1 #D32F2F
-color9 #FF6F60
+color1 #d32f2f
+color9 #ff6f60
 
 # green
-color2 #66BB6A
-color10 #A5D6A7
+color2 #66bb6a
+color10 #a5d6a7
 
 # yellow
-color3 #FDD835
-color11 #F4E04D
+color3 #fdd835
+color11 #f4e04d
 
 # blue
-color4 #2196F3
-color12 #64B5F6
+color4 #2196f3
+color12 #64b5f6
 
 # magenta
-color5 #9C27B0
-color13 #E040FB
+color5 #9c27b0
+color13 #e040fb
 
 # cyan
-color6 #00BCD4
-color14 #4DD0E1
+color6 #00bcd4
+color14 #4dd0e1
 
 # white
-color7 #FAFAFA
-color15 #E1F5FE
+color7 #f8f8f2
+color15 #ffffff
