Add updates module

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -22,7 +22,7 @@
     ],
     
     "modules-right": [
-        "cpu",
+        "custom/updates",
         "memory",
         "pulseaudio",
         "bluetooth",
