Update fonts and idk what I changed in window rules

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -1,12 +1,19 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <fontconfig>
-    <match target="pattern">
-        <test name="family">
-            <string>Noto</string>
-        </test>
-        <edit name="family" mode="prepend">
-            <string>Noto Sans</string>
-        </edit>
-    </match>
+
+  <match>
+    <test name="family"><string>sans-serif</string></test>
+    <edit name="family" mode="prepend">
+      <string>NotoSans Nerd Font</string>
+    </edit>
+  </match>
+
+  <match>
+    <test name="family"><string>monospace</string></test>
+    <edit name="family" mode="prepend">
+      <string>JetBrainsMono Nerd Font</string>
+    </edit>
+  </match>
+
 </fontconfig>
