reorganize scripts and add tray module

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -23,7 +23,7 @@
     
     "modules-right": [
         "custom/updates",
-        "memory",
+        "tray",
         "pulseaudio",
         "bluetooth",
         "network",
