modify border to 1 pixel and change some colors

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,21 +1,23 @@
-# █▀▄▀█ █▀█ █▄ █ █ ▀█▀ █▀█ █▀█
-# █ ▀ █ █▄█ █ ▀█ █  █  █▄█ █▀▄
+
+# █▀▄▀█ █▀█ █▄ █ █ ▀█▀ █▀█ █▀█
+# █ ▀ █ █▄█ █ ▀█ █  █  █▄█ █▀▄
 
 monitor = DP-1, 1920x1080@60, 0x0, 1
 
-# █   ▄▀█ █ █ █▄ █ █▀▀ █ █
-# █▄▄ █▀█ █▄█ █ ▀█ █▄▄ █▀█
+# █   ▄▀█ █ █ █▄ █ █▀▀ █ █
+# █▄▄ █▀█ █▄█ █ ▀█ █▄▄ █▀█
 
 exec-once = waybar & hyprpaper
+exec-once = hyprctl setcursor capitaine-cursors 28
 
-# █▀▀ █▄ █ █ █
-# ██▄ █ ▀█ ▀▄▀
+# █▀▀ █▄ █ █ █
+# ██▄ █ ▀█ ▀▄▀
 
-env = XCURSOR_SIZE, 24
-env = HYPRCURSOR_SIZE, 24
+env = XCURSOR_SIZE, 28
+env = HYPRCURSOR_SIZE, 28
 
-# █   ▄▀█ █▄█ █▀█ █ █ ▀█▀ █▀
-# █▄▄ █▀█  █  █▄█ █▄█  █  ▄█
+# █   ▄▀█ █▄█ █▀█ █ █ ▀█▀ █▀
+# █▄▄ █▀█  █  █▄█ █▄█  █  ▄█
 
 dwindle {
     pseudotile = true
@@ -26,8 +28,8 @@ master {
     new_status = master
 }
 
-# █ █▄ █ █▀█ █ █ ▀█▀
-# █ █ ▀█ █▀▀ █▄█  █ 
+# █ █▄ █ █▀█ █ █ ▀█▀
+# █ █ ▀█ █▀▀ █▄█  █ 
 
 input {
     kb_layout = us
@@ -44,8 +46,8 @@ input {
     }
 }
 
-# █▀▄▀█ █ █▀ █▀▀
-# █ ▀ █ █ ▄█ █▄▄
+# █▀▄▀█ █ █▀ █▀▀
+# █ ▀ █ █ ▄█ █▄▄
 
 misc {
     disable_hyprland_logo = true
@@ -56,8 +58,8 @@ xwayland {
     force_zero_scaling = true
 }
 
-# █▀ █▀█ █ █ █▀█ █▀▀ █▀▀
-# ▄█ █▄█ █▄█ █▀▄ █▄▄ ██▄
+# █▀ █▀█ █ █ █▀█ █▀▀ █▀▀
+# ▄█ █▄█ █▄█ █▀▄ █▄▄ ██▄
 
 source = ~/.config/hypr/animations.conf
 source = ~/.config/hypr/appearance.conf
