--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -1,6 +1,6 @@
 
-# █▄▀ █▀▀ █▄█ █▄▄ █ █▄░█ █▀▄ █ █▄░█ █▀▀ █▀
-# █░█ ██▄ ░█░ █▄█ █ █░▀█ █▄▀ █ █░▀█ █▄█ ▄█
+# █▄▀ █▀▀ █▄█ █▄▄ █ █▄░█ █▀▄ █ █▄░█ █▀▀ █▀
+# █░█ ██▄ ░█░ █▄█ █ █░▀█ █▄▀ █ █░▀█ █▄█ ▄█
 
 $mainMod = Super
 
@@ -23,7 +23,7 @@ bindm = $mainMod, mouse:273, resizewindow
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, E, exec, $file
 bind = $mainMod, B, exec, $browser
-bind = $mainMod, R, exec, wofi --show drun --allow-images
+bind = $mainMod, R, exec, rofi -show drun
 
 bind = $mainMod, Left, movefocus, l
 bind = $mainMod, Right, movefocus, r
