--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/.config/hypr/wallpaper.png
-wallpaper = , ~/.config/hypr/wallpaper.png
+preload = ~/.config/hypr/wallpapers/1.png
+wallpaper = , ~/.config/hypr/wallpapers/1.png
